# py-docstring-manager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
config/: docstringmanager.yaml
src/: docstringmanager.py  sample.py  usage_examples.py
src/core/: constants.py  logger.py
tools/: template_commit.txt
