[tool.poetry]
name = "py-docstring-manager"
version = "0.1.0"
description = "Permite adicionar, remover e gerenciar docstrings em scripts Python com base em arquivos YAML, preservando a formatação original do código."
authors = ["Raphael Coelho <raphael.phael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
redbaron = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
